<resources>
    <string name="app_name">Seller</string>
    <string name="user_id">User Id</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="market">Market</string>
    <string name="bid">Bid/Ra</string>
    <string name="delivery">Delivery</string>
    <string name="reliability">Reliability</string>
    <string name="quality">Quality</string>
    <string name="coverage">Coverage</string>
    <string name="more">More</string>
    <string name="order">Order</string>
    <string name="order_history">Order \nHistory</string>
    <string name="signup">Sign Up</string>
    <string name="total_order_value">Total order \nvalue</string>
    <string name="total_value">Total value:</string>
    <string name="total_order_valuess">Total order value:</string>
    <string name="total_order_values">Total order \nvalue:</string>
    <string name="total_order_volume">Total order \nvolume</string>
    <string name="payment_statistics">Payment \nStatistics</string>
    <string name="order_statistics">Order \nStatistics</string>
    <string name="order_statistic">Order Statistics</string>
    <string name="order_availability_apcatance">Order \nawaiting\n Acceptance</string>
    <string name="item_s">Item(s):</string>
    <string name="department_name_and_address">Department Name And Address:</string>
    <string name="start_date">Start Date:</string>
    <string name="start_date_time">Bid Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="end_date_time">Bid End Date:</string>
    <string name="technical_bid">Technical \nBid</string>
    <string name="upload_documents">Upload\n Documents</string>
    <string name="bid_start">Bid Stats</string>
    <string name="offer_price">Offer\n Price</string>
    <string name="offer_prices">Offer Price</string>
    <string name="emd_nepbg"><![CDATA[EMD & \nEPBG]]></string>
    <string name="verify_esign"><![CDATA[verify & \nesign]]></string>
    <string name="order_and_payments">Order and Payment</string>
    <string name="pending_action">Pending Actions</string>
    <string name="product_service">Product \nService</string>
    <string name="product_pending">Product\n Pending</string>
    <string name="incident">Incident</string>
    <string name="live_bid">Live Bid</string>
    <string name="participated">Participated</string>
    <string name="bid_ra_status">Bid/RA Status</string>
    <string name="payment_status">Payment Status</string>
    <string name="payment_completed">Payment Completed</string>
    <string name="payment_pending">Payment pending</string>
    <string name="count">Count</string>
    <string name="bill_number">Bill Number:</string>
    <string name="mode_of_payment">Mode of payment:</string>
    <string name="payment_date">Payment Date</string>
    <string name="order_date">Order Date: </string>
    <string name="invoice_no">Invoice No: </string>
    <string name="buyer_name">Buyer Name: </string>
    <string name="incident_status">Incident Status</string>
    <string name="escalated_gem">Escalated Gem</string>
    <string name="open">Open</string>
    <string name="severity">Severity:</string>
    <string name="scn">SCN:</string>
    <string name="order_no">Order No.:</string>
    <string name="raised_against">Raised Againt: </string>
    <string name="raised_againsts">Raised Againt*</string>
    <string name="status">Status:</string>
    <string name="contract_no_order_no">Contract No/Order No*</string>
    <string name="to_choose_contact_from_earlier_version_please_click_here">To choose contact from earlier version please
        <a href='"+ click here +"'>"+ mobileUrl +"</a>

        </string>
    <string name="reason">Reason*</string>
    <string name="descriptions">Descriptions(Max 500 character)</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="please_enter_description_max_500_character">Please enter description(Max 500 character)</string>
    <string name="create_new_incident">Create New Incident</string>
    <string name="amount">Amount: </string>
    <string name="crac_no">CRAC No: </string>
    <string name="crac_date">CRAC Date: </string>
    <string name="bill_creation_date">Bill Creation Date: </string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="delivery_in_progress">Delivery In-Progress</string>
    <string name="order_accepted">Order Accepted</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="order_completed">Order Completed</string>
    <string name="order_paid">Order Paid</string>
    <string name="order_rejected_by_seller">Order Rejected By Seller</string>
    <string name="order_status">Order Status</string>
    <string name="contact_date">Contract Date:</string>
    <string name="item_name">Item Name:</string>
    <string name="order_quantity">Order Quantity:</string>
    <string name="product_type">Product Type:</string>
    <string name="buyer_mode">Buyer Mode:</string>
    <string name="buyer_department">Buyer Department:</string>
    <string name="technical_nevaluation">Technical \nEvaluation</string>
    <string name="financial_nevaluation">Financial \nEvaluation</string>
    <string name="bid_naward">Bid \nAward</string>
    <string name="bid_status">Bid Status:</string>
    <string name="quantity">Quantity:</string>
    <string name="bid_lifecycle_from_publish_date">Bid Lifecycle(From Publish Date):</string>
    <string name="bid_validity_from_end_date">Bid Validity(From End Date):</string>
    <string name="consignees_reporting_officer_delivery_location_s">Consignees/Reporting Officer/Delivery Location(S)</string>
    <string name="bid_opening_date_time">Opening Date/Time</string>
    <string name="buyer_details">Buyer Details</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="organisation">Organisation:</string>
    <string name="state">State:</string>
    <string name="department">Department:</string>
    <string name="officer">Officer:</string>
    <string name="list_of_seller_participated">List of seller participated</string>
    <string name="seller_name">Seller Name:</string>
    <string name="participated_on">Participated on:</string>
    <string name="offered_item">Offered Item:</string>
    <string name="mse_mii_status">MSE/MII Status:</string>
    <string name="list_of_seller_qualified_financial">List of seller Qualified Financial</string>
    <string name="total_price">Total Price:</string>
    <string name="awarded">Awarded:</string>
    <string name="details">Details:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bid_result">BID Results</string>
    <string name="product_name">Product Name:</string>
    <string name="brand">Brand:</string>
    <string name="mrp_ndp">MRP/NDP:</string>
    <string name="category">Category</string>
    <string name="discontinued">Discontinued</string>
    <string name="draft_products">Draft Products</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="published">Published</string>
    <string name="rejected">Rejected</string>
    <string name="category_name">Category Name</string>
    <string name="no_of_seller">No Of Seller</string>
    <string name="accounting_based_credit_product">Accounting Based Credit Product</string>
    <string name="acute_care_montitoring_unit">Acute care montitoring unit</string>
    <string name="adheservices">Adheservices</string>
    <string name="adrenergic_blocking_agent">Adrenergic Blocking Agent</string>
    <string name="download_contract">Download Contract</string>
    <string name="contract_date">Contract Date:</string>
    <string name="no_of_consignee">No of Consignee:</string>
    <string name="unit_price">Unit Price:</string>
    <string name="total_quantity">Total Quantity:</string>
    <string name="location">Location:</string>
    <string name="_2021_uploading_deliver_fake_or_counterfelt_or_refurbished_project">2021- uploading/deliver fake or counterfelt or refurbished project</string>
    <string name="serverity">Severity</string>
    <string name="statuus">Status</string>
    <string name="order_number">Order Number</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="sub_category">Sub Category</string>
    <string name="issue_raised_by">Issue Raised By</string>
    <string name="raised_againt">Raised againt</string>
    <string name="scn_sent">SCN Sent</string>
    <string name="description">Description</string>
    <string name="created_on">Created on</string>
    <string name="no_of_days">No of Days</string>
    <string name="last_modified">Last Modified</string>
    <string name="catalogue_statistics">Catalogue Statistics</string>
    <string name="category_wise_liting">Category wise Listing</string>
    <string name="product_and_ervice">Product And Service</string>
    <string name="order_details">Order Details</string>
    <string name="view_details">View Details</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="upload_gst_ta_invoice_document">Upload GST Ta invoice Document</string>
    <string name="please_attach_the_same_tax_invoice_as_uploaded_with_gst_authority_also_ensure_that_fields_entered_while_creating_gem_invoice_matched_with_attached_document_if_the_deatails_and_document_do_not_match_your_invoice_will_get_rejected">Please attach the same tax invoice as uploaded with GST authority also ensure that fields entered while creating GEM invoice matched with attached document.If the deatails and document do not match your invoice will get rejected.</string>
    <string name="seller_tax_invoice_number">Seller Tax Invoice Number*</string>
    <string name="seller_tax_invoice_date">Seller Tax Invoice Date</string>
    <string name="bank_account_number">Bank Account Number*</string>
    <string name="preview">Preview</string>
    <string name="participation">Participation</string>
    <string name="bid_statistics">Bid Statistics</string>
    <string name="no_of_bids">No Of Bids</string>
    <string name="recent">Recent</string>
    <string name="categories">Categories</string>
    <string name="bid_comparision">Bid Comparision</string>
    <string name="next">Next</string>
    <string name="supplied_qty">Supplied Qty*</string>
    <string name="cgst">CGST(₹)*</string>
    <string name="sgst_igst_utgst">SGST/IGST/UTGST(₹)</string>
    <string name="sgst">SGST(₹)*</string>
    <string name="igst">IGST(₹)*</string>
    <string name="utgst">UTGST(₹)</string>
    <string name="gst">GST(₹)*</string>
    <string name="cess">Cess(₹)*</string>
    <string name="freight">Freight(₹)*</string>
    <string name="freight_cgst">Freight CGST(₹)*</string>
    <string name="freight_sgst_igst_utgst">Freight SGST/IGST/UTGST(₹)</string>
    <string name="freight_sgst">Freight SGST(₹)</string>
    <string name="freight_igst">Freight IGST(₹)</string>
    <string name="freight_utgst">Freight UTGST(₹)</string>
    <string name="freight_gst">Freight GST(₹)</string>
    <string name="freight_cess">Freight Cess(₹)*</string>
    <string name="cancel">Cancel</string>
    <string name="product_details">Product Details</string>
    <string name="generate_invoice">Generate Invoice</string>
    <string name="incident_responses">Incident Responses</string>
    <string name="attachments">Attachments</string>
    <string name="download_user_manual">Download User Manual</string>
    <string name="incidet_detaiils">incident Details</string>
    <string name="company_profile">Company Profile</string>
    <string name="business_organisation_ntype">Business/Organisation \nType</string>
    <string name="business_organisation_nname">Business/Organisation \nName</string>
</resources>