<?xml version="1.0" encoding="utf-8"?>
<layout><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:id="@+id/parent"

    android:background="@color/colorPrimary"
    tools:context=".OrderAndPayments">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_dashboard">

    </include>
    <View
        android:layout_below="@+id/toolbar"
android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:background="@color/white"></View>

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_below="@+id/view"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_weight="1"

        android:layout_width="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/white"
    android:textSize="@dimen/sp_18"
    android:gravity="center"
    android:text="@string/total_order_value"></TextView>

        <TextView
            android:textColor="@color/yellow"
            android:textSize="@dimen/sp_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="₹ 2100 cr" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:gravity="center"

        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:gravity="center"
            android:text="@string/total_order_volume">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/sp_22"
            android:textColor="@color/yellow"

            android:layout_height="wrap_content"
            android:text="2100"></TextView>
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/lin1"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="vertical"
        android:padding="@dimen/dp_20"
        android:background="@drawable/ic_rectangle_top_corner"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="0dp">
            <Button
                android:id="@+id/payment_statics"
                android:layout_width="0dp"
                android:text="@string/payment_statistics"
                android:layout_weight="1"
                android:background="@drawable/ic_rectangle_corner_round"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"

                android:layout_gravity="center"
                android:layout_height="match_parent"

                > </Button>
            <Button
                android:id="@+id/order_statics"
                android:layout_width="0dp"
                android:text="@string/order_statistics"
                android:layout_weight="1"
                android:background="@drawable/ic_rectangle_corner_round"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="match_parent"

                > </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:layout_width="0dp"
                android:text="@string/order_availability_apcatance"
                android:layout_weight="1"

                android:background="@drawable/ic_rectangle_corner_round"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="match_parent"

                > </Button>
            <Button
                android:id="@+id/order_history"
                android:layout_width="0dp"
                android:text="@string/order_history"
                android:layout_weight="1"
                android:background="@drawable/ic_rectangle_corner_round"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="match_parent"

                > </Button>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
</layout>